# virtual-amp-system

./: .gitignore  CMakeLists.txt  MESA BOOGIE ING SOFT AMP.jucer  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetDatabase.h  README.md  USAGE_EXAMPLE.md  demo.py  main.py  requirements.txt
Backup/: PluginEditor.cpp  PluginEditor.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: ARCHITECTURE.md  FEATURES.md
src/: __init__.py  amplifier.py  audio_engine.py  effects.py
tests/: test_amplifier.py
